Optimize anim test2

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,11 +126,15 @@ $text-color: rgba($base-color, .8);
     fill: transparent;
     opacity: 0;
 
+    will-change: fill;
+
     animation: fill 2s ease-out forwards 2s 1, opacity 2s ease-out forwards;
 
     path{
         stroke-dasharray: 1000px;
         stroke-dashoffset: 1000px;
+
+        will-change: stroke;
 
         animation: stroke 6s ease-out forwards;
     }
@@ -139,11 +143,13 @@ $text-color: rgba($base-color, .8);
 @keyframes stroke{
     to{
         stroke-dashoffset: 0;
+        will-change: auto;
     }
 }
 @keyframes fill{
     to{
         fill: #fff;
+        will-change: auto;
     }
 }
 @keyframes opacity{
