--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,7 +126,7 @@ $text-color: rgba($base-color, .8);
     fill: transparent;
     opacity: 0;
 
-    will-change: fill;
+    will-change: fill, opacity;
 
     animation: fill 2s ease-out forwards 2s 1, opacity 2s ease-out forwards;
 
