--- a/scss/style.scss
+++ b/scss/style.scss
@@ -532,11 +532,13 @@ debian: '#A81D33'
 
             p{
                 font-size: 3rem;
+                width: 60%;
+                text-align: center;
             }
 
             svg{
                 height: 15vh;
-                width: 15vh;
+                width: 40%;
 
                 fill: #e34f26;
             }
